@@ -1,3 +1,8 @@
+2005-09-28  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/list.py:
+	Remove a couple of methods, now when we have the iter in the instance.
+	
 2005-09-27  Johan Dahlin  <johan@gnome.org>
 
 	* kiwi/ui/widgets/list.py (List.get_previous, List.get_next): New
